tests/fail/assigned_for_no_pass.stderr
error[E0432]: Yielding for loop must pass a value
 --> tests/fail/assigned_for_no_pass.tk:17:32
   |
 17 |     auto y = for auto x in [1] {
   |                                ^
